--- a/index.html
+++ b/index.html
@@ -8,10 +8,203 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
-    /* Styles trimmed for brevity (already provided in the document) */
+    :root{--bg:#06070d;--text:#e6e9ef;--muted:#9aa4b2;--brand:#6d28d9;--brand2:#06b6d4;--card:#0e1320;--ring: rgba(109,40,217,.35)}
+    *{box-sizing:border-box} html,body{margin:0}
+    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;color:var(--text);background:var(--bg);overflow-x:hidden}
+    .bg-wrap{position:fixed;inset:0;z-index:-1;overflow:hidden}
+    .blob{position:absolute;filter:blur(60px);opacity:.35;mix-blend-mode:screen;border-radius:50%}
+    .b1{width:520px;height:520px;background:#4f46e5;left:-120px;top:-80px;animation:float 10s ease-in-out infinite alternate}
+    .b2{width:600px;height:600px;background:#06b6d4;right:-160px;top:-60px;animation:float 12s ease-in-out 1.2s infinite alternate}
+    .b3{width:500px;height:500px;background:#22d3ee;left:20%;bottom:-160px;animation:float 11s ease-in-out .8s infinite alternate}
+    .noise{position:absolute;inset:-50%;background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="4" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity="0.05"/></svg>') repeat;mix-blend-mode:overlay;opacity:.35}
+    @keyframes float{from{transform:translateY(0)}to{transform:translateY(-30px)}}
+
+    header{position:sticky;top:0;z-index:50;backdrop-filter:saturate(120%) blur(10px);background:linear-gradient(180deg, rgba(6,7,13,.8), rgba(6,7,13,.35));border-bottom:1px solid rgba(255,255,255,.06)}
+    .container{max-width:1160px;margin:0 auto;padding:18px 22px}
+    .nav{display:flex;align-items:center;justify-content:space-between}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:40px;height:40px;border-radius:12px;background:conic-gradient(from 0deg, var(--brand), var(--brand2), var(--brand));box-shadow:0 10px 30px var(--ring);animation:float 3.5s ease-in-out infinite alternate}
+    .brand h1{margin:0;font-size:18px;font-weight:700}
+    .nav a.btn{padding:10px 14px;border-radius:12px;background:linear-gradient(135deg, var(--brand), var(--brand2));font-weight:700;border:1px solid rgba(255,255,255,.06);box-shadow:0 6px 18px var(--ring)}
+
+    .hero{display:grid;grid-template-columns:1.2fr .8fr;gap:28px;align-items:center;padding:64px 0}
+    .kicker{color:var(--muted);letter-spacing:.2em;text-transform:uppercase;font-size:12px}
+    .title{font-size:54px;line-height:1.05;margin:10px 0 16px;font-weight:800;letter-spacing:-.02em;background:linear-gradient(90deg, #ffffff, #93c5fd 30%, #a78bfa 60%, #22d3ee 90%);-webkit-background-clip:text;background-clip:text;color:transparent}
+    .lead{font-size:17px;color:#cdd6e1;max-width:680px}
+    .chips{display:flex;flex-wrap:wrap;gap:10px;margin:18px 0}
+    .chip{border:1px solid rgba(255,255,255,.12);background:rgba(14,19,32,.7);padding:8px 12px;border-radius:9999px;font-size:12px}
+
+    .tilt{perspective:1200px}
+    .tilt-card{background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.12);border-radius:18px;box-shadow:0 24px 60px rgba(0,0,0,.45);padding:22px;height:280px;transform-style:preserve-3d;transition:transform .2s ease}
+    .tilt-card:hover{transform:rotateX(6deg) rotateY(-6deg)}
+    .stat-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:6px}
+    .stat{background:rgba(14,19,32,.9);border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:18px}
+    .num{font-size:28px;font-weight:800}.lbl{font-size:12px;color:var(--muted)}
+
+    .marquee-wrap{overflow:hidden;border:1px solid rgba(255,255,255,.06);border-radius:14px;background:rgba(14,19,32,.75);margin:20px 0}
+    .marquee{display:flex;gap:32px;animation:scroll 18s linear infinite;padding:12px}
+    .pill{padding:8px 12px;border-radius:9999px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.03);white-space:nowrap;color:#e5e7eb}
+    @keyframes scroll{from{transform:translateX(0)}to{transform:translateX(-50%)}}
+
+    section{padding:18px 0 64px}
+    .section-title{font-size:22px;margin:0 0 16px}
+    .slider-wrap{position:relative}
+    .slider{display:flex;gap:18px;overflow:hidden}
+    .card{min-width:340px;max-width:360px;background:var(--card);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:18px;display:flex;flex-direction:column;gap:12px;box-shadow:0 18px 40px rgba(0,0,0,.35)}
+    .thumb{height:170px;border-radius:12px;background:linear-gradient(135deg, rgba(124,58,237,.35), rgba(6,182,212,.35));border:1px solid rgba(255,255,255,.12);position:relative;overflow:hidden}
+    .thumb::after{content:"";position:absolute;inset:-40%;background:conic-gradient(from 0deg, transparent, rgba(255,255,255,.12), transparent);animation:spin 6s linear infinite}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    .badge{font-size:11px;color:#a5b4fc;background:rgba(124,58,237,.18);border:1px solid rgba(124,58,237,.35);padding:4px 8px;border-radius:9999px}
+    .card h3{margin:4px 0 2px;font-size:18px}
+    .card p{margin:0;color:#cbd5e1;font-size:14px}
+    .actions{display:flex;gap:10px;margin-top:auto}
+    .button{display:inline-flex;align-items:center;gap:8px;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.15);background:rgba(255,255,255,.03)}
+    .button.primary{background:linear-gradient(135deg, var(--brand), var(--brand2));border-color:transparent;font-weight:700}
+    .controls{display:flex;gap:10px;position:absolute;right:0;top:-40px}
+    .icon-btn{width:38px;height:38px;border-radius:10px;border:1px solid rgba(255,255,255,.15);background:rgba(255,255,255,.04);display:grid;place-items:center}
+
+    .contact-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
+    .contact{background:var(--card);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:18px}
+
+    footer{padding:32px 0;border-top:1px solid rgba(255,255,255,.08);color:var(--muted)}
+
+    @media (max-width: 980px){.hero{grid-template-columns:1fr}.contact-grid{grid-template-columns:1fr}}
+    @media (max-width: 520px){.title{font-size:40px}.card{min-width:88%}.stat-grid{grid-template-columns:1fr 1fr}}
+    @media (prefers-reduced-motion: reduce){.b1,.b2,.b3,.marquee{animation:none}.tilt-card:hover{transform:none}}
   </style>
 </head>
 <body>
-  <!-- content trimmed for brevity -->
+  <div class="bg-wrap">
+    <div class="blob b1"></div><div class="blob b2"></div><div class="blob b3"></div><div class="noise"></div>
+  </div>
+
+  <header>
+    <div class="container nav">
+      <div class="brand"><div class="logo" aria-hidden="true"></div><h1>Nithin Deepa</h1></div>
+      <a class="btn" href="#projects">Projects</a>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <div>
+        <div class="kicker">COMPUTER SCIENCE • CLASS OF 2027</div>
+        <h2 class="title">Tech-professional portfolio with clean graphics & smooth slides.</h2>
+        <p class="lead">CS undergrad @ Murray State focused on <strong>Software Development</strong>, <strong>Data Analytics</strong>, and <strong>Cloud</strong>. Seeking a <strong>Summer 2026</strong> internship.</p>
+        <div class="chips">
+          <span class="chip">Python</span><span class="chip">Java</span><span class="chip">SQL</span>
+          <span class="chip">Flask</span><span class="chip">Pandas</span><span class="chip">Git/GitHub</span>
+        </div>
+        <div class="marquee-wrap" aria-hidden="true">
+          <div class="marquee">
+            <span class="pill">Python</span><span class="pill">Java</span><span class="pill">SQL</span><span class="pill">Flask</span><span class="pill">Pandas</span><span class="pill">Matplotlib</span><span class="pill">Git</span><span class="pill">GitHub</span>
+            <span class="pill">Python</span><span class="pill">Java</span><span class="pill">SQL</span><span class="pill">Flask</span><span class="pill">Pandas</span><span class="pill">Matplotlib</span><span class="pill">Git</span><span class="pill">GitHub</span>
+          </div>
+        </div>
+      </div>
+      <div class="tilt">
+        <div class="tilt-card">
+          <div class="stat-grid">
+            <div class="stat"><div class="num">5+</div><div class="lbl">Projects</div></div>
+            <div class="stat"><div class="num">3</div><div class="lbl">Stacks (Py/Java/SQL)</div></div>
+            <div class="stat"><div class="num">2026</div><div class="lbl">Internship Target</div></div>
+          </div>
+          <p style="margin-top:16px;color:#cbd5e1">Hover this card — subtle 3D tilt and glass effect; shows polish without being flashy.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <h3 class="section-title">Featured Projects</h3>
+      <div class="slider-wrap">
+        <div class="controls">
+          <button class="icon-btn" id="prev" aria-label="Previous">◄</button>
+          <button class="icon-btn" id="next" aria-label="Next">►</button>
+        </div>
+        <div class="slider" id="slider">
+          <article class="card">
+            <div class="thumb" aria-hidden="true"></div>
+            <span class="badge">Flask • SQLite</span>
+            <h3>Expense Tracker</h3>
+            <p>Track expenses with add/list/delete, totals, and CSV export.</p>
+            <div class="actions">
+              <a class="button primary" href="https://github.com/ndeepa-cloud/expense-tracker" target="_blank" rel="noopener">View Code</a>
+              <a class="button" href="https://github.com/ndeepa-cloud/expense-tracker#readme" target="_blank" rel="noopener">README</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <div class="thumb" aria-hidden="true"></div>
+            <span class="badge">Pandas • Matplotlib</span>
+            <h3>Data Analytics Dashboard</h3>
+            <p>Monthly sales dataset with summary stats and plots, exported to Markdown.</p>
+            <div class="actions">
+              <a class="button primary" href="https://github.com/ndeepa-cloud/data-analytics-dashboard" target="_blank" rel="noopener">View Code</a>
+              <a class="button" href="https://github.com/ndeepa-cloud/data-analytics-dashboard#readme" target="_blank" rel="noopener">README</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <div class="thumb" aria-hidden="true"></div>
+            <span class="badge">Java • OOP</span>
+            <h3>Library Management</h3>
+            <p>Console system to manage books, members, and checkouts. Solid OOP.</p>
+            <div class="actions">
+              <a class="button primary" href="https://github.com/ndeepa-cloud/library-management-java" target="_blank" rel="noopener">View Code</a>
+              <a class="button" href="https://github.com/ndeepa-cloud/library-management-java#readme" target="_blank" rel="noopener">README</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <div class="thumb" aria-hidden="true"></div>
+            <span class="badge">Tkinter</span>
+            <h3>Python Quiz App</h3>
+            <p>GUI quiz with multiple-choice questions and score dialog.</p>
+            <div class="actions">
+              <a class="button primary" href="https://github.com/ndeepa-cloud/python-quiz-app" target="_blank" rel="noopener">View Code</a>
+              <a class="button" href="https://github.com/ndeepa-cloud/python-quiz-app#readme" target="_blank" rel="noopener">README</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <div class="thumb" aria-hidden="true"></div>
+            <span class="badge">SQL</span>
+            <h3>SQL Labs</h3>
+            <p>Practice schema and analytics queries for joins & aggregations.</p>
+            <div class="actions">
+              <a class="button primary" href="https://github.com/ndeepa-cloud/sql-labs" target="_blank" rel="noopener">View Code</a>
+              <a class="button" href="https://github.com/ndeepa-cloud/sql-labs#readme" target="_blank" rel="noopener">README</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h3 class="section-title">Contact</h3>
+      <div class="contact-grid">
+        <div class="contact"><strong>Email</strong><br><a href="mailto:9381nithins9@gmail.com">9381nithins9@gmail.com</a></div>
+        <div class="contact"><strong>LinkedIn</strong><br><a href="https://www.linkedin.com/" target="_blank" rel="noopener">Add your link</a></div>
+        <div class="contact"><strong>GitHub</strong><br><a href="https://github.com/ndeepa-cloud" target="_blank" rel="noopener">github.com/ndeepa-cloud</a></div>
+      </div>
+    </section>
+
+    <footer><div>© 2025 Nithin Deepa — Built with GitHub Pages</div></footer>
+  </main>
+
+  <script>
+    const scroller = document.getElementById('slider');
+    const next = document.getElementById('next');
+    const prev = document.getElementById('prev');
+    const cardW = 380;
+    next.addEventListener('click',()=> scroller.scrollBy({left: cardW, behavior:'smooth'}));
+    prev.addEventListener('click',()=> scroller.scrollBy({left: -cardW, behavior:'smooth'}));
+    let auto;
+    const start = () => auto = setInterval(()=> scroller.scrollBy({left: cardW, behavior:'smooth'}), 3800);
+    const stop = () => clearInterval(auto);
+    scroller.addEventListener('mouseenter', stop);
+    scroller.addEventListener('mouseleave', start);
+    start();
+  </script>
 </body>
 </html>
